package com.ecp.les_constructions_dominic_cyr.backend.ProjectSubdomain.PresentationLayer;

public class LotController {
}
