@startuml
title DLCD for Owner View Project Page

class ProjectController {
    - projectService: ProjectService
    - userService: UserService
    - lotRepository: LotRepository
    + getAllProjects(status: ProjectStatus, startDate: LocalDate, endDate: LocalDate, customerId: String, jwt: Jwt, auth: Authentication): ResponseEntity<List<ProjectResponseModel>>
}

class IndividualProjectMetadataController {
    - projectMetadataService: IndividualProjectMetadataService
    + getProjectMetadata(projectIdentifier: String, jwt: Jwt): ResponseEntity<IndividualProjectResponseModel>
}

class LotController {
    - lotService: LotService
    - userService: UserService
    - lotRepository: LotRepository
    + getAllLotsByProject(projectIdentifier: String, jwt: Jwt, auth: Authentication): ResponseEntity<List<LotResponseModel>>
    + getLotById(lotId: String): ResponseEntity<LotResponseModel>
}

interface ProjectService {
    + getAllProjects(isOwner: boolean): List<ProjectResponseModel>
    + filterProjects(status: ProjectStatus, start: LocalDate, end: LocalDate, customerId: String, isOwner: boolean): List<ProjectResponseModel>
}

interface IndividualProjectMetadataService {
    + getProjectMetadata(projectIdentifier: String, auth0UserId: String): IndividualProjectResponseModel
}

interface LotService {
    + getAllLotsByProject(projectIdentifier: String): List<LotResponseModel>
    + getLotById(lotId: String): LotResponseModel
}

class ProjectServiceImpl implements ProjectService {
    - projectRepository: ProjectRepository
}

class IndividualProjectMetadataServiceImpl implements IndividualProjectMetadataService {
    - projectRepository: ProjectRepository
    - usersRepository: UsersRepository
    - lotRepository: LotRepository
}

class LotServiceImpl implements LotService {
    - lotRepository: LotRepository
    - projectRepository: ProjectRepository
}

interface ProjectRepository {
    + findAll(): List<Project>
    + findByProjectIdentifier(identifier: String): Optional<Project>
}

interface LotRepository {
    + findByProject_ProjectIdentifier(identifier: String): List<Lot>
    + findByLotIdentifier_LotId(lotId: UUID): Lot
    + findByAssignedUserId(userId: UUID): List<Lot>
}

interface UsersRepository {
    + findByAuth0UserId(auth0Id: String): Optional<Users>
}

class Project {
    - projectId: Long
    - projectIdentifier: String
    - projectName: String
    - projectDescription: String
    - status: ProjectStatus
    - startDate: LocalDate
    - lotIdentifiers: List<String>
    - progressPercentage: Integer
    - location: String
}

class Lot {
    - id: Integer
    - lotIdentifier: LotIdentifier
    - lotNumber: String
    - civicAddress: String
    - lotStatus: LotStatus
    - project: Project
    - assignedUsers: List<Users>
}

class Users {
    - userId: Integer
    - userIdentifier: UserIdentifier
    - auth0UserId: String
    - userRole: UserRole
}

class ProjectResponseModel {
    - projectIdentifier: String
    - projectName: String
    - status: ProjectStatus
    - startDate: LocalDate
}

class IndividualProjectResponseModel {
    - projectIdentifier: String
    - projectName: String
    - status: ProjectStatus
    - progressPercentage: Integer
    - location: String
    - assignedUsers: AssignedUsersDTO
}

class LotResponseModel {
    - lotIdentifier: String
    - lotNumber: String
    - civicAddress: String
    - status: LotStatus
}

ProjectController --> ProjectService
IndividualProjectMetadataController --> IndividualProjectMetadataService
LotController --> LotService

ProjectServiceImpl --> ProjectRepository
IndividualProjectMetadataServiceImpl --> ProjectRepository
IndividualProjectMetadataServiceImpl --> UsersRepository
IndividualProjectMetadataServiceImpl --> LotRepository
LotServiceImpl --> LotRepository

Project "1" *-- "many" Lot : contains
Lot "many" -- "many" Users : assigned to

@enduml
